# byteswap

./: LICENSE  README.md  __init__.py  mkdocs.yml  pyproject.toml
.github/workflows/: 1.bump-version.yml  2.build-publish.yml
docs/pages/about/: authors.md  contact.md
docs/pages/api-docs/: ModelConfigPM.md  SimpleModel.md
docs/pages/dev/: file-structure.md
docs/pages/dev/scripts/: 3.get-version.md  5.bump-version.md
docs/pages/getting-started/: configuration.md  error-codes.md  examples.md  installation.md
examples/simple/: main.py
notebooks/: example.ipynb
scripts/: bump-version.sh  get-version.sh
templates/configs/: config.json  config.yml
tests/: test_generated.py  test_simple_model.py
