[build-system]
requires = ["setuptools>=70.3.0,<80.0.0", "setuptools-scm>=8.0.4,<9.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "byteswap"
authors = [{ name = "Asadbek Kiyomov", email = "asadbey0331@gmail.com" }]
description = "decentralized data sharing platform support framework"
readme = "README.md"
requires-python = ">=3.9,<4.0"
keywords = [
	"byteswap",
	"model",
	"module",
	"template",
	"ai/ml/dl",
	"artificial-intelligence",
	"machine-learning",
	"deep-learning",
]
license = { file = "LICENSE.txt" }
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Build Tools",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["byteswap*"]
# namespaces = false

[tool.setuptools.dynamic]
version = { attr = "byteswap.__version__.__version__" }
dependencies = { file = "./requirements.txt" }
# optional-dependencies.gpu = { file = ["./requirements/requirements.gpu.txt"] }

[project.urls]
Homepage = "https://github.com/akiyomov/byteswap"
Documentation = "https://akiyomov.github.io/byteswap"
Repository = "https://github.com/akiyomov/byteswap.git"
Issues = "https://github.com/akiyomov/byteswap/issues"
Changelog = "https://github.com/akiyomov/byteswap/CHANGELOG.md"
